# TInCuP

./: .clang-tidy  .gitignore  BANNER.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE.md  SECURITY.md  banner_check.py  pyproject.toml  run_local_ci.sh  test_single_header
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  cpo-verification.yml  dco-check.yml  dependabot.yml  publish.yml  scorecard.yml
TInCuP.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
build_systems/cmake/: CMakeLists.txt  README.md
build_systems/make/: Makefile  README.md
build_systems/meson/: README.md  meson.build  meson_options.txt
build_systems/meson/tests/: test_adl_trait_shim.cpp  test_static_dispatch.cpp
cpo_tools/: config.py  cpo_generator.py  cpo_registry.py  cpo_verification.py  cpo_verification_enhanced.py
cpo_tools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cpo_tools/src/: __init__.py  args.py  llm.py  output.py  process.py  shim_impl.py  trait_impl.py
cpo_tools/templates/: concrete_cpo.hpp.jinja2  doxygen.jinja2  generic_cpo.hpp.jinja2  trait_adl_shim.hpp.jinja2  trait_impl.hpp.jinja2
cpo_tools/templates/macros/: dispatch.jinja2  helpers.jinja2
docs/: BUILD_SYSTEMS.md  CI_POWERSHELL_GUIDE.md  DIAGNOSTICS.md  DOXYGEN.md  DOXYGEN_GROUPS.dox  DOXYGEN_MESON.md  GETTING_STARTED.md  LOCAL_TESTING.md  MSVC_GUIDE.md  PLANNED_IMPROVEMENTS.md  PREFERRED_IMPL.md  STATIC_DISPATCH.md  TAG_INVOKE_GENERATION_ANALYSIS.md  TESTING_POLICY.md  VSCODE_INTEGRATION.md  WARNINGS.md  cpo_registry.json  examples.md  index.md
docs/development/: testing_policy.md
docs/reference/: api_introspection.md  composition.md  cpo_registry.md
docs/user_guide/: cpo_generator.md  ide_integration.md  third_party_types.md
editor_integration/clion/: INSTALL.md  README.md  external_tools.xml  install.sh  live_templates.xml
editor_integration/clion/file_templates/: CPO_Header.hpp  CPO_Implementation.cpp
editor_integration/vim/: INSTALL.md  README.md  install.sh
editor_integration/vim/autoload/: cpo.vim
editor_integration/vim/plugin/: cpo.vim
editor_integration/vscode/: README.md
examples/: CMakeLists.txt  README.md
examples/networking/: Makefile  README.md  binary_backend.hpp  json_backend.hpp  main.cpp  serialize.hpp  simple_example  simple_main.cpp  third_party_support.hpp  user_types.hpp
examples/serialize/: CMakeLists.txt  Makefile  README.md  debug_test  debug_test.cpp  serialize.hpp  test  test_clang  test_serialization  test_serialization.cpp
include/tincup/: bool_dispatch.hpp  cpo_base.hpp  cpo_concepts.hpp  cpo_descriptor.hpp  cpo_diagnostics.hpp  cpo_impl_detect.hpp  cpo_introspection.hpp  cpo_tag.hpp  cpo_traits.hpp  dereference.hpp  string_dispatch.hpp  string_literal.hpp  tag_invoke.hpp  tincup.hpp  type_counter.hpp  type_list.hpp  type_utils.hpp
scripts/: README.md  banner_check.py  checkin.sh  generate_examples_doc.py  generate_single_header.py  readme_examples.json  run_local_ci.sh  setup-git-hooks.sh  update_readme_examples.py  update_readme_version.py
single_include/: tincup.hpp
tests/: clion_integration_test.sh  msvc_smoke_test.cpp  msvc_test_CMakeLists.txt  requirements.txt  run_tests.py  test.hpp  test_adl_trait_shim.cpp  test_cpo_impl_detect.cpp  test_cpo_patterns.py  test_cpo_traits.cpp  test_diagnostic_config_2.cpp  test_diagnostic_config_3.cpp  test_diagnostic_level_1.cpp  test_diagnostic_levels.cpp  test_diagnostic_messages.py  test_msvc_ci.sh  test_single_header.cpp  test_static_dispatch.cpp  vim_integration_test.sh  vscode_config_check.sh
tests/diagnostic_messages/: test_argument_order_mismatch.cpp  test_arity_mismatch.cpp  test_const_mismatch.cpp  test_dereference_diagnostic.cpp
tests/fuzz/: fuzz_cpo_generator.py
